[gd_scene load_steps=13 format=3 uid="uid://dxmbuh5x8jn17"]

[ext_resource type="PackedScene" uid="uid://3ru4vgdsdk1x" path="res://Scenes/world.tscn" id="1_bo1nx"]
[ext_resource type="PackedScene" uid="uid://b4kpwnybc71ud" path="res://Scenes/player.tscn" id="1_jjgbg"]
[ext_resource type="Script" uid="uid://c0cgv8xxowvym" path="res://Scripts/main.gd" id="1_jjvhh"]
[ext_resource type="FontFile" uid="uid://dr4h28xl6l06i" path="res://Resources/Icons/Montreal-Bold.ttf" id="3_8gbba"]
[ext_resource type="AudioStream" uid="uid://drh1bsxykig2k" path="res://Music/menu_music.mp3" id="5_kry3j"]
[ext_resource type="AudioStream" uid="uid://cteltm4ppd6e0" path="res://Music/background_music.mp3" id="6_21xkr"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7u77a"]
sky_top_color = Color(0.356863, 0.815686, 0.933333, 1)
sky_horizon_color = Color(0.737255, 0.603922, 0.729412, 1)
ground_bottom_color = Color(0.254902, 0.588235, 0.862745, 1)
ground_horizon_color = Color(0.443137, 0.752941, 0.968627, 1)

[sub_resource type="Sky" id="Sky_jjgbg"]
sky_material = SubResource("ProceduralSkyMaterial_7u77a")

[sub_resource type="Environment" id="Environment_7u77a"]
background_mode = 2
sky = SubResource("Sky_jjgbg")
fog_enabled = true
fog_light_color = Color(0.298039, 0.584314, 0.752941, 1)
fog_light_energy = 0.3
fog_sky_affect = 0.3

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_bo1nx"]
dof_blur_far_enabled = true
dof_blur_far_distance = 30.0
dof_blur_amount = 1.0

[sub_resource type="PlaneMesh" id="PlaneMesh_jjgbg"]
size = Vector2(100, 100)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_bo1nx"]

[node name="Main" type="Node3D"]
process_mode = 3
script = ExtResource("1_jjvhh")

[node name="Environment" type="Node3D" parent="."]
process_mode = 1

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.91938, -0.377203, 0.111619, -0.321394, -0.55667, 0.766044, -0.226819, -0.740159, -0.633022, -1, 600, -970)
shadow_enabled = true
shadow_opacity = 0.5
directional_shadow_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_7u77a")
camera_attributes = SubResource("CameraAttributesPractical_bo1nx")

[node name="World" parent="." instance=ExtResource("1_bo1nx")]
process_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="Player" parent="." instance=ExtResource("1_jjgbg")]
process_mode = 1

[node name="Floor StaticBody3D" type="StaticBody3D" parent="."]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor StaticBody3D"]
mesh = SubResource("PlaneMesh_jjgbg")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor StaticBody3D"]
shape = SubResource("WorldBoundaryShape3D_bo1nx")

[node name="Menu" type="CanvasLayer" parent="."]
process_mode = 3
layer = 2

[node name="Container" type="ColorRect" parent="Menu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.054902, 0.054902, 0.854902, 1)

[node name="Label" type="Label" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -53.0
offset_top = 35.0
offset_right = 53.0
offset_bottom = 58.0
grow_horizontal = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_8gbba")
theme_override_font_sizes/font_size = 100
text = "DOCK & ROLL"

[node name="LevelLabel" type="Label" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -67.5
offset_top = -48.0
offset_right = 67.5
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_8gbba")
theme_override_font_sizes/font_size = 30
text = "last saved level: 1"

[node name="ButtonStart" type="Button" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -124.0
offset_right = 350.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_8gbba")
theme_override_font_sizes/font_size = 50
text = "NEW GAME"

[node name="ButtonLoad" type="Button" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -4.0
offset_right = 350.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_8gbba")
theme_override_font_sizes/font_size = 50
text = "LOAD GAME"

[node name="ButtonExit" type="Button" parent="Menu/Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = 116.0
offset_right = 350.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_8gbba")
theme_override_font_sizes/font_size = 50
text = "EXIT"

[node name="Sounds" type="Node3D" parent="."]

[node name="MenuMusic" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_kry3j")
volume_db = -30.0
parameters/looping = true

[node name="LevelMusic" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("6_21xkr")
volume_db = -30.0
parameters/looping = true

[connection signal="pressed" from="Menu/Container/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="Menu/Container/ButtonLoad" to="." method="_on_button_load_pressed"]
[connection signal="pressed" from="Menu/Container/ButtonExit" to="." method="_on_button_exit_pressed"]
